--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -190,3 +190,43 @@ alt-shift-h = ['join-with left', 'mode main']
 alt-shift-j = ['join-with down', 'mode main']
 alt-shift-k = ['join-with up', 'mode main']
 alt-shift-l = ['join-with right', 'mode main']
+
+[[on-window-detected]]
+if.app-id = "net.ankiweb.dtop"
+run = ['layout floating', 'move-node-to-workspace R']
+
+[[on-window-detected]]
+if.app-id = "com.apple.finder"
+run = ['layout floating', 'move-node-to-workspace F']
+
+[[on-window-detected]]
+if.app-id = "company.thebrowser.Browser"
+run = 'move-node-to-workspace A'
+
+[[on-window-detected]]
+if.app-id = "com.github.wez.wezterm"
+run = 'move-node-to-workspace D'
+
+[[on-window-detected]]
+if.app-id = "com.apple.mail"
+run = 'move-node-to-workspace E'
+
+[[on-window-detected]]
+if.app-id = "com.TickTick.task.mac"
+run = 'move-node-to-workspace T'
+
+[[on-window-detected]]
+if.app-id = "com.apple.iCal"
+run = 'move-node-to-workspace T'
+
+[[on-window-detected]]
+if.app-id = "com.apple.Notes"
+run = 'move-node-to-workspace N'
+
+[[on-window-detected]]
+if.app-id = "com.apple.MobileSMS"
+run = ['layout floating', 'move-node-to-workspace C']
+
+[[on-window-detected]]
+if.app-id = "com.apple.Passwords"
+run = 'layout floating'
