--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -43,7 +43,6 @@ key-mapping.preset = 'qwerty'
 # See https://nikitabobko.github.io/AeroSpace/guide#on-focus-changed-callbacks
 # See https://nikitabobko.github.io/AeroSpace/commands#move-mouse
 on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
-on-focus-changed = ['move-mouse window-lazy-center']
 
 # Gaps between windows (inner-*) and between monitor edges (outer-*).
 # Possible values:
@@ -226,6 +225,18 @@ run = 'move-node-to-workspace N'
 [[on-window-detected]]
 if.app-id = "com.apple.MobileSMS"
 run = ['layout floating', 'move-node-to-workspace C']
+
+[[on-window-detected]]
+if.app-id = "com.hnc.Discord"
+run = ['layout floating', 'move-node-to-workspace C']
+
+[[on-window-detected]]
+if.app-id = "com.apple.Preview"
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = "com.microsoft.VSCode"
+run = 'layout floating'
 
 [[on-window-detected]]
 if.app-id = "com.apple.Passwords"
