Add docker to recognised apps in aerospace

--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -257,3 +257,7 @@ run = 'layout floating'
 [[on-window-detected]]
 if.app-id = "md.obsidian"
 run = 'move-node-to-workspace O'
+
+[[on-window-detected]]
+if.app-id = "com.electron.dockerdesktop"
+run = 'layout floating'
