--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -264,4 +264,4 @@ run = 'layout floating'
 
 [[on-window-detected]]
 if.app-id = "com.microsoft.teams2"
-run = 'layout floating'
+run = ['layout floating', 'move-node-to-workspace C']
